Tidying up the breadcrumbs

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -2,6 +2,9 @@
   "admin.breadcrumb": "Admin",
   "admin.home-header": "DeepRacer Event Manager administration",
 
+  "operator.breadcrumb": "Operator",
+  "event-management.breadcrumb": "Event management",
+
   "button.cancel": "Cancel",
   "button.clear-selected": "Clear selected",
   "button.clear-filters": "Clear filters",
@@ -238,7 +241,7 @@
 
   "race-admin.header": "Race management",
   "race-admin.description": "",
-  "race-admin.breadcrumb": "Race",
+  "race-admin.breadcrumb": "Race management",
   "race-admin.races-table-header": "Races",
   "race-admin.created-at": "Created",
   "race-admin.information": "Race information",
@@ -404,7 +407,8 @@
   "home.time-keeper": "Time keeper",
 
   "models.all-header": "Models",
-  "models.breadcrumb": "Models",
+  "models.breadcrumb": "Model management",
+  "models.all-breadcrumb": "All models",
   "models.clear-filter": "Clear filter",
   "models.filter-models": "Filter models",
   "models.header": "Models",
@@ -548,7 +552,7 @@
   "topnav.create-user": "Create user",
   "topnav.groups": "Groups",
   "topnav.race-admin": "Manage race",
-  "topnav.models": "Models management",
+  "topnav.models": "Model management",
   "topnav.models-own": "Model management",
   "topnav.more": "More",
   "topnav.quarantined-models": "Quarantined models",
@@ -576,8 +580,9 @@
   "commentator.race.stats": "Details about the current racer and race.",
   "commentator.breadcrumb": "Commentator",
   "commentator.race.breadcrumb": "Race",
-  "commentator.race.actualRacerStats": "Stats for the current racer",
-  "commentator.race.time": "time",
+  "commentator.race.actual-racer-stats-header": "Current racer",
+  "commentator.race.actual-racer-stats": "",
+  "commentator.race.time": "Time",
   "commentator.race.racerName": "Racer name",
   "commentator.race.racerFastestLap": "Fastest time",
   "commentator.race.racerSlowestLap": "Slowest time",
@@ -588,12 +593,12 @@
   "commentator.race.timeLeft": "Time left",
   "commentator.race.lapCount": "# of laps ",
   "commentator.race.invalidLapCount": "Not valid laps",
-  "commentator.race.historicalRacerStats": "Stats from previous runs during this event",
+  "commentator.race.historicalRacerStats": "",
   "commentator.race.historicalRacerStats.header_one": "Data from previous <1>{{count}}</1> run",
   "commentator.race.historicalRacerStats.header_other": "Data from previous <1>{{count}}</1> runs",
-  "commentator.race.averagelapCount": "Average laps per Run",
+  "commentator.race.averagelapCount": "Average laps per run",
   "commentator.race.restSum": "# of Resets",
-  "commentator.race.averageResetsPerLap": "Average resets per Lap",
+  "commentator.race.averageResetsPerLap": "Average resets per lap",
 
   "user-profile.header": "User settings",
   "user-profile.header.details": "Account details",
