--- a/website/public/locales/en/help-admin-create-user.json
+++ b/website/public/locales/en/help-admin-create-user.json
@@ -1,5 +1,5 @@
 {
   "header": "## Create user",
-  "content": "",
+  "content": "On this page, you can create new users for DREM. For each new user, enter the following information:\n\n* **Username**\n* **Email**\n* **Country**",
   "footer": ""
 }
