Switching valid / not valid to yes / no for laps and also removing hard coded text

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -248,7 +248,7 @@
   "race-admin.information": "Race information",
   "race-admin.race-id": "Race Id",
   "race-admin.track-id": "Track",
-  "race-admin.username": "User name",
+  "race-admin.username": "Username",
   "race-admin.user-id": "User Id",
   "race-admin.number-of-laps": "Laps",
   "race-admin.raced-by-proxy": "Raced by proxy",
@@ -324,7 +324,7 @@
   "groups.detail.header-creation-date": "Creation date",
   "groups.detail.header-group-member": "Group member?",
   "groups.detail.header-last-modified-date": "Last modified date",
-  "groups.detail.header-name": "User name",
+  "groups.detail.header-name": "Username",
   "groups.detail.header-email": "Email address",
   "groups.notifications-error": " {{errorMessage}}, group membership could not be altered for {{userName}}",
   "groups.detail.header-user-enabled": "User enabled?",
@@ -432,7 +432,7 @@
   "models.delete-model": "Delete model",
   "models.page-size-label": "models",
   "models.upload-date": "Upload date",
-  "models.user-name": "User name",
+  "models.user-name": "Username",
   "models.model-id": "ID",
   "models.md5-hash": "Model MD5",
   "models.md5-hash-metadata": "Metadata MD5",
@@ -475,6 +475,8 @@
 
   "timekeeper.automated-timer-connected": "Automated timer connected",
   "timekeeper.automated-timer-not-connected": "Automated timer not connected",
+  "timekeeper.automated-timer-msg-connected": "Connected",
+  "timekeeper.automated-timer-msg-not-connected": "Not connected",
   "timekeeper.capture-lap": "Capture lap",
   "timekeeper.car-reset": "Car reset",
   "timekeeper.current-lap": "Current lap",
