Additional help panel content

--- a/website/public/locales/en/help-admin-model-quarantine.json
+++ b/website/public/locales/en/help-admin-model-quarantine.json
@@ -1,5 +1,5 @@
 {
   "header": "## Quarantined models",
-  "content": "",
+  "content": "On this page, you can view models that have been quarantined and are not available for use because they have defects or may contain malicious content.",
   "footer": ""
 }
