Ui strings -  copy changes

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -10,7 +10,7 @@
   "button.confirm": "Confirm",
   "button.save": "Save",
   "button.save-changes": "Save changes",
-  "button.copy": "Copy",
+  "common.button.copy": "Copy",
   "button.delete": "Delete",
   "button.edit": "Edit",
   "button.create": "Create",
@@ -59,26 +59,26 @@
   "filtering.token-limit-show-more": "Show more",
   "filtering.token-limit-show-fewer": "Show fewer",
   "filtering.clear-filters-text": "Clear filters",
-  "car-activation.breadcrumb": "Car activation",
-  "car-activation.copied-to-clipboard": "copied to clipboard",
-  "car-activation.description": "Register and update cars.",
-  "car-activation.fleet": "Fleet",
-  "car-activation.generate": "Generate",
-  "car-activation.header": "Car activation",
-  "car-activation.hostname-placeholder": "deepracer01",
-  "car-activation.hostname": "Hostname",
-  "car-activation.password-placeholder": "password",
-  "car-activation.password": "Password",
-  "car-activation.script-lower": "script",
-  "car-activation.script-warning": "Note: This script will disable the car GUI",
-  "car-activation.script": "Script",
-  "car-activation.ssid-placeholder": "ssid",
-  "car-activation.ssid": "SSID",
-  "car-activation.ssm-only": "SSM Only",
-  "car-activation.wifi-config": "Optional Wi-Fi configuration for networks with hidden SSIDs",
-  "car-activation.wifi-placeholder": "wifimagic",
-  "car-activation.wifi": "WiFi Password",
-  "car-activation.version-warning": "DREM is designed for use with AWS DeepRacer cars running firmware version 20.04 and above. Earlier firmware versions are not supported.",
+  "AdminActivation.car-activation.breadcrumb": "Car activation",
+  "AdminActivation.car-activation.copied-to-clipboard": "copied to clipboard",
+  "AdminActivation.car-activation.description": "Register and update cars.",
+  "AdminActivation.car-activation.fleet": "Fleet",
+  "AdminActivation.car-activation.generate": "Generate",
+  "AdminActivation.car-activation.header": "Car activation",
+  "AdminActivation.car-activation.hostname-placeholder": "deepracer01",
+  "AdminActivation.car-activation.hostname": "Hostname",
+  "AdminActivation.car-activation.password-placeholder": "password",
+  "AdminActivation.car-activation.password": "Password",
+  "AdminActivation.car-activation.script-lower": "script",
+  "AdminActivation.car-activation.script-warning": "Note: This script will disable the car GUI",
+  "AdminActivation.car-activation.script": "Script",
+  "AdminActivation.car-activation.ssid-placeholder": "ssid",
+  "AdminActivation.car-activation.ssid": "SSID",
+  "AdminActivation.car-activation.ssm-only": "SSM Only",
+  "AdminActivation.car-activation.wifi-config": "Optional Wi-Fi configuration for networks with hidden SSIDs",
+  "AdminActivation.car-activation.wifi-placeholder": "wifimagic",
+  "AdminActivation.car-activation.wifi": "WiFi Password",
+  "AdminActivation.car-activation.version-warning": "DREM is designed for use with AWS DeepRacer cars running firmware version 20.04 and above. Earlier firmware versions are not supported.",
   "label-printer.printable-label-header": "Printable label",
   "label-printer.printable-label-alt-text": "Printable label",
   "label-printer.printable-label-copy-button": "Copy label URL",
@@ -575,8 +575,7 @@
   "commentator.race.averageResetsPerLap": "Average resets per lap",
   "user-profile.header": "User settings",
   "user-profile.header.details": "Account details",
-  "user-profile.description": "Update your user settings.",
-  "user-profile.settings.header": "Your account details",
+  "user-profile.description": "Update your user settings and password.",
   "user-profile.settings.name": "Name",
   "user-profile.breadcrumb": "User",
   "user-profile.settings.breadcrumb": "Settings",
@@ -585,8 +584,8 @@
   "user-profile.modal.header-delete-account": "Delete DREM account",
   "user-profile.modal.confirm-delete-account": "Are you sure you wish to delete your DREM account, this action is not reversible?",
   "user-profile.settings.delete.header": "Delete your DREM account",
-  "user-profile.settings.changepw.header": "Please complete the form to update your password",
-  "user-profile.buttons.update-password": "Change password",
+  "user-profile.settings.changepw.header": "Complete the form to update your password",
+  "user-profile.buttons.update-password": "Change your password",
   "user-profile.settings.form.label.current_pw": "Current password",
   "user-profile.settings.form.label.current_pw.ph": "Enter your password",
   "user-profile.settings.form.label.new_pw": "New password",
