--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -289,7 +289,7 @@
   "fleets.no-fleet-message": "Create a fleet.",
   "fleets.fleet-name-placeholder": "My awesome fleet",
   "fleets.fleet-name-empty-message": "Fleet name cannot be empty",
-  "fleets.header": "Fleets administration",
+  "fleets.header": "Fleets",
   "fleets.loading": "Loading fleets",
   "fleets.new-fleet": "New fleet",
   "fleets.no-fleets-message": "Create a fleet.",
@@ -370,26 +370,28 @@
   "notifications.deleting-item": "Deleting {{itemType}} {{itemName}}...",
   "notifications.delete-item-success": "{{itemType}} {{itemName}} deleted",
   "notifications.delete-item-error": "{{itemType}} {{itemName}} could not be deleted, {{errorMessage}}",
-  "home.all-models-description": "List of the models uploaded by users.",
-  "home.all-models": "All models",
   "home.breadcrumb": "Home",
-  "home.car-activation-description": "Add cars to DREM.",
-  "home.car-activation": "Car activation",
-  "home.cars-description": "List of all cars registered (online and offline).",
-  "home.cars": "Cars",
-  "home.events-description": "Create and administer events.",
-  "home.events": "Events",
-  "home.fleets-description": "Create and administer your fleet of cars.",
-  "home.fleets": "Fleets",
-  "home.header": "DeepRacer Event Manager",
-  "home.leaderboard-description": "Access event leaderboards.",
-  "home.leaderboard": "Leaderboard",
-  "home.models-description": "Model management",
-  "home.models": "Models",
-  "home.quarantined-description": "Any models that have been flagged as suspicious during upload.",
-  "home.quarantined": "Quarantined models",
-  "home.time-keeper-description": "Event time keeper.",
-  "home.time-keeper": "Time keeper",
+  "homeCards.homeCards.models-description": "Model management",
+  "homeCards.homeCards.models": "Models",
+  "homeCards.adminHomeCards.all-models-description": "List of the models uploaded by users.",
+  "homeCards.adminHomeCards.all-models": "All models",
+  "homeCards.adminHomeCards.car-activation-description": "Add cars to DREM.",
+  "homeCards.adminHomeCards.car-activation": "Car activation",
+  "homeCards.adminHomeCards.cars-description": "List of all cars registered (online and offline).",
+  "homeCards.adminHomeCards.cars": "Cars",
+  "homeCards.adminHomeCards.events-description": "Create and administer events.",
+  "homeCards.adminHomeCards.events": "Events",
+  "homeCards.adminHomeCards.fleets-description": "Create and administer your fleet of cars.",
+  "homeCards.adminHomeCards.fleets": "Fleets",
+  "homeCards.adminHomeCards.header": "DeepRacer Event Manager",
+  "homeCards.adminHomeCards.leaderboard-description": "Access event leaderboards.",
+  "homeCards.adminHomeCards.leaderboard": "Leaderboard",
+  "homeCards.adminHomeCards.quarantined-description": "Any models that have been flagged as suspicious during upload.",
+  "homeCards.adminHomeCards.quarantined": "Quarantined models",
+  "homeCards.adminHomeCards.time-keeper-description": "Event time keeper.",
+  "homeCards.adminHomeCards.time-keeper": "Time keeper",
+  "homeCards.adminHomeCards.registration": "Registration",
+  "homeCards.adminHomeCards.registration-description": "Racers register themselves or are registered by administrators to DREM.",
   "models.all-header": "Models",
   "models.breadcrumb": "Model management",
   "models.all-breadcrumb": "All models",
@@ -538,7 +540,7 @@
   "topnav.upload": "Upload",
   "topnav.commentator": "Commentator",
   "topnav.user-profile": "Settings",
-  "topnav.commentator-race": "Race",
+  "topnav.commentator-race": "Race statistics",
   "topnav.registration": "Registration",
   "topnav.users": "Users",
   "topnav.operator": "Operator",
@@ -550,10 +552,10 @@
   "upload.header-description": "Upload models into DREM ready for racing on the track.",
   "upload.header": "Upload models",
   "upload.label": "Upload model",
-  "commentator.race.header": "Race",
+  "commentator.race.header": "Race statistics",
   "commentator.race.stats": "Details about the current racer and race.",
   "commentator.breadcrumb": "Commentator",
-  "commentator.race.breadcrumb": "Race",
+  "commentator.race.breadcrumb": "Race statistics",
   "commentator.race.actual-racer-stats-header": "Current racer",
   "commentator.race.actual-racer-stats": "",
   "commentator.race.time": "Time",
